--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,34 @@
+body {
+    background:radial-gradient(circle at 100%,#b7b1b170,#171616),  /* fallback for old browsers */
+                radial-gradient(farthest-side at top left,#2b2929,#0a0a0a70),
+                radial-gradient(farthest-side at top left,#252323,#0a0a0a70),
+                radial-gradient(farthest-corner at top right,#282626,#0a0a0a70),
+                radial-gradient(farthest-corner at top right,#413d3d,#24232370);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
+}
 .container1{
-    display: grid;
-    place-items: center; 
-    padding-top: 10px; 
-    padding-bottom: 10px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .container {
     display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    width: 80%;
-    padding-top: 10px; 
-    padding-bottom: 10px; 
+    flex-direction: column;
+    align-items: center;
+    text-align: center; 
+    margin-bottom: 1em; 
 }
 
 .text {
     flex: 1;
     text-align: left;
     color: #bdbdbd;      
+}
+.text h1, .text h3 {
+    margin: 0.5em 0; 
 }
 
 .image {
@@ -36,7 +48,7 @@
 
 .a1{
     position: relative;
-    padding: 20px 60px;
+    padding: 20px 40px;
     background-color: rgba(45,45,45,1);
     border-radius: 50px;
     color: #999;
@@ -44,14 +56,18 @@
     text-decoration: none;
     overflow: hidden;
     transition: .5s; 
-    width: 165px;
+    width: 150px;
     height: 40px;
     text-align: center;
     margin-left: 50px;
     font-size:medium;
     white-space:nowrap;
     line-height: 35px;
+    margin: 0.5em 10px; 
+    display: block;
+    text-decoration: none;
 }
+
 a span{
     position: relative;
     z-index: 1;
@@ -84,4 +100,18 @@ a span{
     position: absolute;
     inset: 2px;
     border-radius: 48px;
+}
+
+
+@media (min-width: 768px) {
+    .container {
+        flex-direction: row; 
+        justify-content: space-around; 
+    }
+}
+
+@media (min-width: 1024px) {
+    .container {
+        max-width: 1024px; 
+    }
 }
