--- a/css/learning.css
+++ b/css/learning.css
@@ -62,8 +62,9 @@
     padding: 0 70px;
     height: 30px;
     overflow: hidden;
-    text-align: center;
+    text-align: justify;
     transition: 0.5s;
+    
 }
 
 .container .card:hover .content {
