--- a/css/learning.css
+++ b/css/learning.css
@@ -62,7 +62,7 @@
     padding: 0 70px;
     height: 30px;
     overflow: hidden;
-    text-align: justify;
+    text-align: center;
     transition: 0.5s;
     
 }
