--- a/css/learning.css
+++ b/css/learning.css
@@ -164,3 +164,15 @@ a {
     height: 100%;
     transition-delay: 0s;
 }
+.imgBxafter::after {
+    content: '';
+    position: absolute; 
+    bottom: 0; 
+    right: 0; 
+    width: 40px; 
+    height: 40px; 
+    background-image: url('../img/Click.jpg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
